# Inference

./: CMakeLists.txt  questions.md  record.md
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  act_kernel.cu  act_kernel.h  addresidual_rmsnorm.cu  addresidual_rmsnorm.h  attn_softmax_kernel.cu  attn_softmax_kernel.h  build_causal_mask.cu  build_causal_mask.h  calculate_paddingoffset.cu  calculate_paddingoffset.h  concat_past_kv.cu  concat_past_kv.h  cublas.cpp  cublas.h  embedding.cu  embedding.h  fused_decoder_self_attention.cu  fused_decoder_self_attention.h  linear.cu  linear.h  qkv_bias_and_ROPE.cu  qkv_bias_and_ROPE.h  repeat_kv.cu  repeat_kv.h  rmsnorm.cu  rmsnorm.h  sampling.cu  sampling.h  topk.cu  topk.h  transpose_and_remove_padding.cu  transpose_and_remove_padding.h
src/layers/attention/: context_attention.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/model/: llama_params.h
src/utils/: CMakeLists.txt  check.h  debug_utils.h  string_utils.h  tensor.h  vectorize_utils.h  weights_utils.cu  weights_utils.h
src/weights/: attn_weights.h  embedding_weights.h  ffn_weights.h  weight.h  weights.h  weights_utils.cu  weights_utils.h
test/: bin_gen.py  main.cu  template_test.cpp  test
test/model_test/: main.cu  model.cu  model.h  test
tests/unittests/: CMakeLists.txt  data_gen.cpp  data_gen.h  kernel_test  kernel_test.cu  test  test_input_embedding.cu  test_rmsnorm.cu
tools/: HF_llama_run_script.py  test  tokenizer.cpp
tools/test/: template_test.h
